# explore_gstreamer

./: CMakeLists.txt  compile_commands.json
basic_tutorials/: t1.c  t2.c  t2_1.c  t3.c  t3_1.c
